fix: ui: buttons in tables are not readable
also, add doc for procurement requests (see PR in documentation repo)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -505,7 +505,6 @@ button:disabled {
   border-collapse: separate;
   border-spacing: 0;
 
-  button,
   span,
   thead,
   th,
